Complete navbar section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,55 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <header id="header">
+        <nav>
+            <ul class="sidebar">
+                <li onclick=hideSideBar()><a href=""><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">Skills</a>
+                </li>
+                <li>
+                    <a href="#">Linkedin</a>
+                </li>
+                <li>
+                    <a href="#">Projects</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+            <ul>
+                <li class="logo">
+                    <a class="logo-text" href="#"><span class="h-icon">H</span>&nbsp;&nbsp;Hashir Aslam</a>
+                </li>
+                <li class="hideOnMobile">
+                    <a href="#">About</a>
+                </li>
+                <li class="hideOnMobile">
+                    <a href="#">Skills</a>
+                </li>
+                <li class="hideOnMobile">
+                    <a href="#">Linkedin</a>
+                </li>
+                <li class="hideOnMobile">
+                    <a href="#">Projects</a>
+                </li>
+                <li class="hideOnMobile">
+                    <a href="#">Contact</a>
+                </li>
+                <li class="menu-button" onclick=showSideBar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="intro">
+        <div class=""></div>
+    </section>
+
+    <footer></footer>
     <script src="./js/index.js"></script>
 </body>
 </html>
