Complete portfolio layout and designs

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
             <ul class="sidebar">
                 <li onclick=hideSideBar()><a href=""><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="#intro">About</a>
                 </li>
                 <li>
-                    <a href="#">Skills</a>
+                    <a href="#skills">Skills</a>
                 </li>
                 <li>
-                    <a href="#">Linkedin</a>
+                    <a target="_blank" href="https://www.linkedin.com/in/hashir-aslam-639b28186/">Linkedin</a>
                 </li>
                 <li>
-                    <a href="#">Projects</a>
+                    <a href="#project">Projects</a>
                 </li>
                 <li>
                     <a href="#">Contact</a>
@@ -32,19 +32,19 @@
                     <a class="logo-text" href="#"><span class="h-icon">H</span>&nbsp;&nbsp;Hashir Aslam</a>
                 </li>
                 <li class="hideOnMobile">
-                    <a href="#">About</a>
+                    <a href="#intro">About</a>
                 </li>
                 <li class="hideOnMobile">
-                    <a href="#">Skills</a>
+                    <a href="#skills">Skills</a>
                 </li>
                 <li class="hideOnMobile">
-                    <a href="#">Linkedin</a>
+                    <a target="_blank" href="https://www.linkedin.com/in/hashir-aslam-639b28186/">Linkedin</a>
                 </li>
                 <li class="hideOnMobile">
-                    <a href="#">Projects</a>
+                    <a href="#project">Projects</a>
                 </li>
                 <li class="hideOnMobile">
-                    <a href="#">Contact</a>
+                    <a href="#contact">Contact</a>
                 </li>
                 <li class="menu-button" onclick=showSideBar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
             </ul>
@@ -52,10 +52,163 @@
     </header>
 
     <section id="intro">
-        <div class=""></div>
+        <div class="intro-container">
+            <div class="profile-image">
+                <img src="./images/photo_14.jpg" alt="">
+            </div>
+            <div class="profile-contents">
+                <h4>Web Developer</h4>
+                <h1>Hashir Aslam</h1>
+                <p>A Graduate in Electronics and Biomedical Engineering to the field of Software Development, i bring a blend of analytical thinking and creativity into the world of coding. Eager to explore the endless possibilities of Web and App Development, and committed to continuous growth and contributing meaningful solutions to the digital world.</p>
+                <div class="button">
+                    <a target="_blank" href="https://www.linkedin.com/in/hashir-aslam-639b28186/">
+                        <button class="linkedin-btn">Linkedin</button>
+                    </a>
+                    <a href="./Resume/HashirAslam.pdf" download>
+                        <button class="resume-btn">Resume</button>
+                    </a>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <footer></footer>
+    <section id="skills">
+        <div class="skills-container">
+            <div class="title">
+                <h1>My Skills</h1><br><br>
+                <div class="underline"></div>
+            </div>
+            <div class="skills-contents">
+                <div class="skills-1">
+                    <h3>Leadership</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati quaerat delectus veniam architecto voluptatibus nesciunt rerum officia illum! Nihil voluptate praesentium nulla autem ea totam est alias, veniam eos possimus.</p>
+                </div>
+                <div class="skills-2">
+                    <h3>Problem Solving</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati quaerat delectus veniam architecto voluptatibus nesciunt rerum officia illum! Nihil voluptate praesentium nulla autem ea totam est alias, veniam eos possimus.</p>
+                </div>
+                <div class="skills-3">
+                    <h3>Adaptability</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati quaerat delectus veniam architecto voluptatibus nesciunt rerum officia illum! Nihil voluptate praesentium nulla autem ea totam est alias, veniam eos possimus.</p>
+                </div>
+                <div class="skills-4">
+                    <h3>Team Player</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati quaerat delectus veniam architecto voluptatibus nesciunt rerum officia illum! Nihil voluptate praesentium nulla autem ea totam est alias, veniam eos possimus.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="education">
+        <div class="education-container">
+            <div class="title">
+                <h1>Education</h1><br><br>
+                <div class="underline"></div>
+            </div>
+            <div class="education-contents">
+                <div class="education-1">
+                    <h1>B.Tech in Electronics and Biomedical Engineering</h1>
+                    <h3>Model Engineering College</h3>
+                    <p>Thrikkakara, Kochi</p>
+                </div>
+                <div class="education-2">
+                    <h1>Higher Secondary Education (CBSE)</h1>
+                    <h3>Le Mer Public School</h3>
+                    <p>Thriprayar</p>
+                </div>
+                <div class="education-3">
+                    <h1>High School Education (CBSE)</h1>
+                    <h3>Le Mer Public School</h3>
+                    <p>Thriprayar</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="expertise">
+        <div class="expertise-container">
+            <div class="title">
+                <h1>Expertise</h1>
+                <div class="underline"></div>
+            </div>
+            <div class="expertise-contents">
+                <div class="expertise-1">
+                    <h1>HTML</h1>
+                </div>
+                <div class="expertise-2">
+                    <h1>CSS</h1>
+                </div>
+                <div class="expertise-3">
+                    <h1>Javascript</h1>
+                </div>
+                <div class="expertise-4">
+                    <h1>Python</h1>
+                </div>
+                <div class="expertise-5">
+                    <h1>Django</h1>
+                </div>
+                <div class="expertise-6">
+                    <h1>SQL</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="project">
+        <div class="project-container">
+            <div class="title">
+                <h1>Projects</h1>
+                <div class="underline"></div>
+            </div>
+            <div class="project-contents">
+                <div class="project-1">
+                    <h1>Title</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat quidem labore adipisci modi deleniti aut. Optio, magnam. Totam ratione cumque ducimus maiores. Pariatur repellat voluptates, voluptas nobis laborum at adipisci!</p>
+                    <a href="">
+                        <button>View</button>
+                    </a>
+                </div>
+                <div class="project-2">
+                    <h1>Title</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat quidem labore adipisci modi deleniti aut. Optio, magnam. Totam ratione cumque ducimus maiores. Pariatur repellat voluptates, voluptas nobis laborum at adipisci!</p>
+                    <a href="">
+                        <button>View</button>
+                    </a>
+                </div>
+                <div class="project-3">
+                    <h1>Title</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat quidem labore adipisci modi deleniti aut. Optio, magnam. Totam ratione cumque ducimus maiores. Pariatur repellat voluptates, voluptas nobis laborum at adipisci!</p>
+                    <a href="">
+                        <button>View</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer id="contact">
+        <div id="footer-container">
+            <div class="contact-section">
+                <ul>
+                    <li>
+                        <a href="https://www.linkedin.com/in/hashir-aslam-639b28186/">Linkedin</a>
+                    </li>
+                    <li>
+                        <a href="">Whatsapp</a>
+                    </li>
+                    <li>
+                        <a href="">Instagram</a>
+                    </li>
+                    <li>
+                        <a href="mailto:Hashiraslam2015@gmailcom">Hashiraslam2015@gmail.com</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-credit">
+                <p>Built by Hashir Aslam</p>
+            </div>
+        </div>
+    </footer>
     <script src="./js/index.js"></script>
 </body>
 </html>
