--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                     <a href="#project">Projects</a>
                 </li>
                 <li>
-                    <a href="#contact   ">Contact</a>
+                    <a href="#contact">Contact</a>
                 </li>
             </ul>
             <ul>
                 <li class="logo">
-                    <a class="logo-text" href="#"><span class="h-icon">H</span>&nbsp;&nbsp;Hashir Aslam</a>
+                    <a class="logo-text" href="#"><span class="h-icon">H</span>&nbsp;Hashir Aslam</a>
                 </li>
                 <li class="hideOnMobile">
                     <a href="#intro">About</a>
@@ -82,19 +82,19 @@
             <div class="skills-contents">
                 <div class="skills-1">
                     <h3>Leadership</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati quaerat delectus veniam architecto voluptatibus nesciunt rerum officia illum! Nihil voluptate praesentium nulla autem ea totam est alias, veniam eos possimus.</p>
+                    <p>Proficient in guiding teams towards common goals through effective communication, delegation and decision-making. Inspire and motivate team members to achieve excellence.</p>
                 </div>
                 <div class="skills-2">
                     <h3>Problem Solving</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati quaerat delectus veniam architecto voluptatibus nesciunt rerum officia illum! Nihil voluptate praesentium nulla autem ea totam est alias, veniam eos possimus.</p>
+                    <p>Strong analytical and critical thinking skills, with the ability to identify issues, analyze root causes, and develop innovative solutions.</p>
                 </div>
                 <div class="skills-3">
                     <h3>Adaptability</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati quaerat delectus veniam architecto voluptatibus nesciunt rerum officia illum! Nihil voluptate praesentium nulla autem ea totam est alias, veniam eos possimus.</p>
+                    <p>Highly adaptable to changing environments and situations, able to quickly learn and apply new concepts. Thrive in dynamic and fast-paced settings, proficient at adjusting strategies to meet evolving needs.</p>
                 </div>
                 <div class="skills-4">
                     <h3>Team Player</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati quaerat delectus veniam architecto voluptatibus nesciunt rerum officia illum! Nihil voluptate praesentium nulla autem ea totam est alias, veniam eos possimus.</p>
+                    <p>Collaborative and supportive team member, known for promoting positive working relationships and contributing effectively with the team. Value teamwork, actively listen to others, and willingly share knowledge and expertise.</p>
                 </div>
             </div>
         </div>
