Update social media links

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <a target="_blank" href="https://www.linkedin.com/in/hashir-aslam-639b28186/">
                         <button class="linkedin-btn">Linkedin</button>
                     </a>
-                    <a href="./Resume/HashirAslam.pdf" download>
+                    <a href="./Resume/HashirAslam_Resume.pdf" download="HashirAslam_Resume">
                         <button class="resume-btn">Resume</button>
                     </a>
                 </div>
@@ -192,16 +192,16 @@
             <div class="contact-section">
                 <ul>
                     <li>
-                        <a href="https://www.linkedin.com/in/hashir-aslam-639b28186/">Linkedin</a>
+                        <a target="_blank" href="https://www.linkedin.com/in/hashir-aslam-639b28186/">Linkedin</a>
                     </li>
                     <li>
-                        <a href="">Whatsapp</a>
+                        <a target="_blank" href="https://wa.me/8129326996">Whatsapp</a>
                     </li>
                     <li>
-                        <a href="">Instagram</a>
+                        <a target="_blank" href="https://www.instagram.com/haashir_____">Instagram</a>
                     </li>
                     <li>
-                        <a href="mailto:Hashiraslam2015@gmailcom">Hashiraslam2015@gmail.com</a>
+                        <a target="_blank" href="mailto:Hashiraslam2015@gmailcom">Hashiraslam2015@gmail.com</a>
                     </li>
                 </ul>
             </div>
