Add project links in project section

--- a/index.html
+++ b/index.html
@@ -163,26 +163,26 @@
             </div>
             <div class="project-contents">
                 <div class="project-1">
-                    <h1>Title</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat quidem labore adipisci modi deleniti aut. Optio, magnam. Totam ratione cumque ducimus maiores. Pariatur repellat voluptates, voluptas nobis laborum at adipisci!</p>
-                    <a href="">
+                    <h1>YumYumCloud Kitchen</h1>
+                    <p>Developed a restaurant website using Python Django. Implemented responsive design and seamlessly integrated design elements to reflect the restaurant's identity and attract potential patrons.</p>
+                    <a target="_blank" href="https://yumyumcloud.com">
                         <button>View</button>
                     </a>
                 </div>
                 <div class="project-2">
-                    <h1>Title</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat quidem labore adipisci modi deleniti aut. Optio, magnam. Totam ratione cumque ducimus maiores. Pariatur repellat voluptates, voluptas nobis laborum at adipisci!</p>
-                    <a href="">
+                    <h1>Music Band</h1>
+                    <p>Welcome to my first website, where I'm excited to share my music band website that i built using HTML, CSS, Bootstrap, Python, Django during my journey into web development.</p>
+                    <a target="_blank" href="https://hashiraslam.pythonanywhere.com/">
                         <button>View</button>
                     </a>
                 </div>
-                <div class="project-3">
-                    <h1>Title</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat quidem labore adipisci modi deleniti aut. Optio, magnam. Totam ratione cumque ducimus maiores. Pariatur repellat voluptates, voluptas nobis laborum at adipisci!</p>
-                    <a href="">
+                <!-- <div class="project-3">
+                    <h1>GlamorTrend</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum nam cum nostrum nemo necessitatibus architecto officiis consequatur minus distinctio ab. Possimus autem error consequuntur laborum. Culpa, dolorem. Nostrum, esse quia</p>
+                    <a target="_blank" href="">
                         <button>View</button>
                     </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
