Modify header options: Replace About with Expertise

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             <ul class="sidebar">
                 <li onclick=hideSideBar()><a href=""><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
                 <li>
-                    <a href="#intro">About</a>
+                    <a href="#skills">Skills</a>
                 </li>
                 <li>
-                    <a href="#skills">Skills</a>
+                    <a href="#expertise">Expertise</a>
                 </li>
                 <li>
                     <a target="_blank" href="https://www.linkedin.com/in/hashir-aslam-639b28186/">Linkedin</a>
@@ -32,10 +32,10 @@
                     <a class="logo-text" href="#"><span class="h-icon">H</span>&nbsp;Hashir Aslam</a>
                 </li>
                 <li class="hideOnMobile">
-                    <a href="#intro">About</a>
+                    <a href="#skills">Skills</a>
                 </li>
                 <li class="hideOnMobile">
-                    <a href="#skills">Skills</a>
+                    <a href="#expertise">Expertise</a>
                 </li>
                 <li class="hideOnMobile">
                     <a target="_blank" href="https://www.linkedin.com/in/hashir-aslam-639b28186/">Linkedin</a>
