--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 </ul>
             </div>
             <div class="footer-credit">
-                <p>Built by Hashir Aslam</p>
+                <!-- <p>Built by Hashir Aslam</p> -->
             </div>
         </div>
     </footer>
