Add several animating effects using css for evaluation purpose

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 <li class="logo">
                     <a class="logo-text" href="#"><span class="h-icon">H</span>&nbsp;Hashir Aslam</a>
                 </li>
-                <li class="hideOnMobile">
+                <!-- <li class="hideOnMobile">
                     <a href="#skills">Skills</a>
-                </li>
+                </li> -->
                 <li class="hideOnMobile">
                     <a href="#expertise">Expertise</a>
                 </li>
@@ -54,17 +54,17 @@
     <section id="intro">
         <div class="intro-container">
             <div class="profile-image">
-                <img src="./images/photo_14.jpg" alt="">
+                <img src="./images/profile-latest.JPG" alt="Hashir Aslam image">
             </div>
             <div class="profile-contents">
-                <h4>Software Engineer</h4>
-                <h1>Hashir Aslam</h1>
-                <p>A Graduate in Electronics and Biomedical Engineering to the field of Software Development, i bring a blend of analytical thinking and creativity into the world of coding. Eager to explore the endless possibilities of Web and App Development, and committed to continuous growth and contributing meaningful solutions to the digital world.</p>
+                <h1 id="animated-heading">Hashir Aslam</h1>
+                <h4>Software Developer</h4>
+                <p>As a recent graduate in Electronics and Biomedical Engineering transitioning into the field of Software Development, i bring a blend of analytical thinking and creativity into the world of coding. I'm currently undergoing training at Experion Technologies.</p>
                 <div class="button">
                     <a target="_blank" href="https://www.linkedin.com/in/hashir-aslam-639b28186/">
                         <button class="linkedin-btn">Linkedin</button>
                     </a>
-                    <a href="./Resume/HashirAslam_Resume.pdf" download="HashirAslam_Resume">
+                    <a href="./Resume/HashirAslam_Resume_Exp.pdf" download="HashirAslam_Resume">
                         <button class="resume-btn">Resume</button>
                     </a>
                 </div>
@@ -79,19 +79,19 @@
                 <div class="underline"></div>
             </div>
             <div class="skills-contents">
-                <div class="skills-1">
+                <div class="skills-1 skill-item">
                     <h3>Leadership</h3>
                     <p>Proficient in guiding teams towards common goals through effective communication, delegation and decision-making. Inspire and motivate team members to achieve excellence.</p>
                 </div>
-                <div class="skills-2">
-                    <h3>Problem Solving</h3>
-                    <p>Strong analytical and critical thinking skills, with the ability to identify issues, analyze root causes, and develop innovative solutions.</p>
+                <div class="skills-2 skill-item">
+                    <h3>Time Management</h3>
+                    <p>As a professional, i possess exceptional time management skills honed through various experiences. I excel in efficiently organizing tasks, prioritizing responsibilities, and meeting deadlines in fast-paced environments.</p>
                 </div>
-                <div class="skills-3">
+                <div class="skills-3 skill-item">
                     <h3>Adaptability</h3>
                     <p>Highly adaptable to changing environments and situations, able to quickly learn and apply new concepts. Thrive in dynamic and fast-paced settings, proficient at adjusting strategies to meet evolving needs.</p>
                 </div>
-                <div class="skills-4">
+                <div class="skills-4 skill-item">
                     <h3>Team Player</h3>
                     <p>Collaborative and supportive team member, known for promoting positive working relationships and contributing effectively with the team. Value teamwork, actively listen to others, and willingly share knowledge and expertise.</p>
                 </div>
@@ -106,18 +106,18 @@
                 <div class="underline"></div>
             </div>
             <div class="education-contents">
-                <div class="education-1">
+                <div class="education-1 education-item">
                     <h1>B.Tech in Electronics and Biomedical Engineering</h1>
                     <h3>Model Engineering College</h3>
                     <p>Thrikkakara, Kochi</p>
                 </div>
-                <div class="education-2">
-                    <h1>Higher Secondary Education (CBSE)</h1>
+                <div class="education-2 education-item">
+                    <h1>Higher Secondary (CBSE)</h1>
                     <h3>Le Mer Public School</h3>
                     <p>Thriprayar</p>
                 </div>
-                <div class="education-3">
-                    <h1>High School Education (CBSE)</h1>
+                <div class="education-3 education-item">
+                    <h1>High School (CBSE)</h1>
                     <h3>Le Mer Public School</h3>
                     <p>Thriprayar</p>
                 </div>
@@ -132,23 +132,26 @@
                 <div class="underline"></div>
             </div>
             <div class="expertise-contents">
-                <div class="expertise-1">
+                <div class="expertise-1 expertise-item">
                     <h1>HTML</h1>
                 </div>
-                <div class="expertise-2">
+                <div class="expertise-2 expertise-item">
                     <h1>CSS</h1>
                 </div>
-                <div class="expertise-3">
+                <div class="expertise-3 expertise-item">
                     <h1>Javascript</h1>
                 </div>
-                <div class="expertise-4">
+                <div class="expertise-4 expertise-item">
                     <h1>Python</h1>
                 </div>
-                <div class="expertise-5">
+                <div class="expertise-5 expertise-item">
                     <h1>Django</h1>
                 </div>
-                <div class="expertise-6">
+                <div class="expertise-6 expertise-item">
                     <h1>SQL</h1>
+                </div>
+                <div class="expertise-6 expertise-item">
+                    <h1>C++</h1>
                 </div>
             </div>
         </div>
@@ -161,16 +164,16 @@
                 <div class="underline"></div>
             </div>
             <div class="project-contents">
-                <div class="project-1">
+                <div class="project-1 project-item">
                     <h1>YumYumCloud Kitchen</h1>
                     <p>Developed a restaurant website using Python Django. Implemented responsive design and seamlessly integrated design elements to reflect the restaurant's identity and attract potential patrons.</p>
                     <a target="_blank" href="https://yumyumcloud.com">
                         <button>View</button>
                     </a>
                 </div>
-                <div class="project-2">
+                <div class="project-2 project-item">
                     <h1>Music Band</h1>
-                    <p>Welcome to my first website, where I'm excited to share my music band website that i built using HTML, CSS, Bootstrap, Python, Django during my journey into web development.</p>
+                    <p>Welcome to my first website, a music band website that i built using HTML, CSS, Javascript, Bootstrap, Python, Django during my journey into web development.</p>
                     <a target="_blank" href="https://hashiraslam.pythonanywhere.com/">
                         <button>View</button>
                     </a>
@@ -205,7 +208,7 @@
                 </ul>
             </div>
             <div class="footer-credit">
-                <!-- <p>Built by Hashir Aslam</p> -->
+                <p><i>Hashir Aslam</i></p>
             </div>
         </div>
     </footer>
