Code refactoring: remove unused code

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
         <nav>
             <ul class="sidebar">
                 <li onclick=hideSideBar()><a href=""><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-                <li>
-                    <a href="#skills">Skills</a>
-                </li>
+                <!-- <li>
+                    <a href="#intro">About Me</a>
+                </li> -->
                 <li>
                     <a href="#expertise">Expertise</a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://www.linkedin.com/in/hashir-aslam-639b28186/">Linkedin</a>
+                    <a href="#project">Projects</a>
                 </li>
                 <li>
-                    <a href="#project">Projects</a>
+                    <a target="_blank" href="#education">Education</a>
                 </li>
                 <li>
                     <a href="#contact">Contact</a>
@@ -32,16 +32,16 @@
                     <a class="logo-text" href="#"><span class="h-icon">H</span>&nbsp;Hashir Aslam</a>
                 </li>
                 <!-- <li class="hideOnMobile">
-                    <a href="#skills">Skills</a>
+                    <a href="#intro">About Me</a>
                 </li> -->
                 <li class="hideOnMobile">
                     <a href="#expertise">Expertise</a>
                 </li>
                 <li class="hideOnMobile">
-                    <a target="_blank" href="https://www.linkedin.com/in/hashir-aslam-639b28186/">Linkedin</a>
+                    <a href="#project">Projects</a>
                 </li>
                 <li class="hideOnMobile">
-                    <a href="#project">Projects</a>
+                    <a target="_blank" href="#education">Education</a>
                 </li>
                 <li class="hideOnMobile">
                     <a href="#contact">Contact</a>
