--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
                     <a href="#intro">About Me</a>
                 </li> -->
                 <li>
+                    <a href="#education">Education</a>
+                </li>
+                <li>
                     <a href="#expertise">Expertise</a>
                 </li>
                 <li>
                     <a href="#project">Projects</a>
-                </li>
-                <li>
-                    <a target="_blank" href="#education">Education</a>
                 </li>
                 <li>
                     <a href="#contact">Contact</a>
@@ -35,16 +35,16 @@
                     <a href="#intro">About Me</a>
                 </li> -->
                 <li class="hideOnMobile">
+                    <a href="#education">Education</a>
+                </li>
+                <li class="hideOnMobile">
                     <a href="#expertise">Expertise</a>
                 </li>
                 <li class="hideOnMobile">
                     <a href="#project">Projects</a>
                 </li>
                 <li class="hideOnMobile">
-                    <a target="_blank" href="#education">Education</a>
-                </li>
-                <li class="hideOnMobile">
-                    <a href="#contact">Contact</a>
+                    <a href="#contact" style="opacity: .7;">Contact</a>
                 </li>
                 <li class="menu-button" onclick=showSideBar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26" viewBox="0 -960 960 960" width="26"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
             </ul>
@@ -142,16 +142,16 @@
                     <h1>Javascript</h1>
                 </div>
                 <div class="expertise-4 expertise-item">
-                    <h1>Python</h1>
+                    <h1>Bootstrap</h1>
                 </div>
                 <div class="expertise-5 expertise-item">
+                    <h1>Python</h1>
+                </div>
+                <div class="expertise-6 expertise-item">
                     <h1>Django</h1>
                 </div>
-                <div class="expertise-6 expertise-item">
+                <div class="expertise-7 expertise-item">
                     <h1>SQL</h1>
-                </div>
-                <div class="expertise-6 expertise-item">
-                    <h1>C++</h1>
                 </div>
             </div>
         </div>
